--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^12.0.11",
-    "alex": "^8.0.0",
+    "alex": "^10.0.0",
     "eslint": "^7.5.0",
     "execa": "1.0.0",
     "fs-extra": "^9.0.0",
@@ -31,8 +31,8 @@
     "globby": "^11.0.0",
     "husky": "^4.2.5",
     "jest": "26.3.0",
-    "lerna": "3.20.2",
-    "lerna-changelog": "~0.8.2",
+    "lerna": "^5.1.6",
+    "lerna-changelog": "^2.2.0",
     "lint-staged": "^10.2.2",
     "meow": "^6.1.1",
     "multimatch": "^4.0.0",
@@ -53,5 +53,8 @@
     "*.{js,md,css,html}": [
       "prettier --trailing-comma es5 --single-quote --write"
     ]
+  },
+  "dependencies": {
+    "react-dev-utils": "^10.2.1"
   }
 }
