--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -29,8 +29,8 @@
   "types": "./lib/react-app.d.ts",
   "dependencies": {
     "@babel/core": "7.10.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.1",
-    "@svgr/webpack": "5.4.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^6.2.1",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.1.0",
@@ -61,7 +61,7 @@
     "jest-resolve": "26.3.0",
     "jest-watch-typeahead": "0.6.0",
     "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
@@ -69,10 +69,10 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
     "react-app-polyfill": "^1.0.6",
-    "react-dev-utils": "^10.2.1",
+    "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.8.3",
     "resolve": "1.17.0",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "^3.1.4",
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.2.1",
@@ -80,9 +80,9 @@
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.0",
     "webpack": "4.43.0",
-    "webpack-dev-server": "3.11.0",
+    "webpack-dev-server": "^4.9.2",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.3"
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "devDependencies": {
     "react": "^16.12.0",
